# Carney_ARIA_Workshop_2026

./: 03_advanced_topics.ipynb  04_choice_only_rlssm.ipynb  05_rlssm_basic.ipynb  06_rlssm_advanced.ipynb  LICENSE  README.md  pyproject.toml
_build/: compose.py
mindrl/: hssm_mindrl_joint_model.ipynb  hssm_mindrl_notebook_1.ipynb
mindrl/data/: mindrl_4ab_restless_bandit.csv  reward_schedules.csv  splits.json
mindrl/data_sample/: heldout_trials.csv  manifest.json  train_trials.csv
