# Environment for the Carney ARIA 2026 HSSM workshop notebooks.
#
[project]
name = "carney-aria-workshop-2026"
version = "0.0.0"
description = "Environment for the HSSM workshop notebooks (recomposed tutorials)"
requires-python = ">=3.12,<3.15"
dependencies = [
    "hssm @ git+https://github.com/lnccbrown/HSSM.git@main",
    "ssm-simulators>=0.13.2",
    "zeus-mcmc>=2.5",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "arviz>=0.18",
    "graphviz>=0.20",
    "pyarrow>=17",
    "nbconvert>=7.16",
    "onnxruntime>=1.27.0",
    "ipywidgets>=8.1",
]

[tool.uv]
package = false
